--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -47,6 +47,19 @@ uses [fd](https://github.com/sharkdp/fd) to search recursively in the current di
 - **relative_paths:** whether to see paths as relative or absolute
 - **follow_symlinks:** search inside symlinks as well
 
+### poppler
+
+<img
+  src="/rovr/screenshots/preview-pdf.png"
+  alt="rovr's poppler integration"
+/>
+
+uses [poppler](https://poppler.freedesktop.org) to preview PDF files
+- **enable:** `plugins.finder.enabled = true`
+- **poppler_folder:** set the location where the poppler tools are installed (e.g., `/usr/bin` or `C:\Program Files\poppler\bin`).
+- **use_pdftocairo:** whether to use pdftocairo instead of pdftoppm (may help performance)
+- **threads:** number of threads to use for processing PDF files (default is 1)
+
 ---
 
 a plugin system is also under works, stay tuned!
