--- a/docs/src/content/docs/features/previewing-files.mdx
+++ b/docs/src/content/docs/features/previewing-files.mdx
@@ -40,3 +40,9 @@ when a folder is selected, the preview panel will show a list of the files and f
 ![archive preview](/rovr/screenshots/preview-archive.svg)
 
 for archive files (like `.zip`, `.tar.gz`, `.rar`), rovr will display a list of the files and folders contained within the archive.
+
+### pdf
+
+![pdf preview](/rovr/screenshots/preview-pdf.png)
+
+for pdf files, rovr makes use of [poppler](https://poppler.freedesktop.org) via [pdf2image](https://pypi.org/project/pdf2image). you can also scroll through the pdf with your mouse (scrollbars are unavailable for now) or use your keyboard to navigate it.
