docs: mention suspending for editor

--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -32,6 +32,7 @@ opens files and folders in your preferred editor.
 - **enable:** `plugins.editor.enabled = true`
 - **executables:** set the command to open files (`file_executable`) and folders (`folder_executable`).
 - **keybinding:** the default keybinding is `e`.
+- **suspending:** whether to suspend rovr when editing a file. suspend when using a TUI editor, and not when using a gui editor for seamlessness
 
 ### finder
 
