--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -159,6 +159,10 @@ description: config schema humanified
     - [8.5.2. Property `Rovr Config > plugins > poppler > threads`](#plugins_poppler_threads)
     - [8.5.3. Property `Rovr Config > plugins > poppler > use_pdftocairo`](#plugins_poppler_use_pdftocairo)
     - [8.5.4. Property `Rovr Config > plugins > poppler > poppler_folder`](#plugins_poppler_poppler_folder)
+  - [8.6. Property `Rovr Config > plugins > file_one`](#plugins_file_one)
+    - [8.6.1. Property `Rovr Config > plugins > file_one > enabled`](#plugins_file_one_enabled)
+    - [8.6.2. Property `Rovr Config > plugins > file_one > mime_rules`](#plugins_file_one_mime_rules)
+      - [8.6.2.1. Property `Rovr Config > plugins > file_one > mime_rules > additionalProperties`](#plugins_file_one_mime_rules_additionalProperties)
 - [9. Property `Rovr Config > mode`](#mode)
   - [9.1. Property `Rovr Config > mode > additionalProperties`](#mode_additionalProperties)
 
@@ -2043,13 +2047,14 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Required**              | No          |
 | **Additional properties** | Not allowed |
 
-| Property                    | Type   | Title/Description |
-| --------------------------- | ------ | ----------------- |
-| [zoxide](#plugins_zoxide)   | object |                   |
-| [bat](#plugins_bat)         | object |                   |
-| [editor](#plugins_editor)   | object |                   |
-| [finder](#plugins_finder)   | object |                   |
-| [poppler](#plugins_poppler) | object |                   |
+| Property                      | Type   | Title/Description |
+| ----------------------------- | ------ | ----------------- |
+| [zoxide](#plugins_zoxide)     | object |                   |
+| [bat](#plugins_bat)           | object |                   |
+| [editor](#plugins_editor)     | object |                   |
+| [finder](#plugins_finder)     | object |                   |
+| [poppler](#plugins_poppler)   | object |                   |
+| [file_one](#plugins_file_one) | object |                   |
 
 ### <a name="plugins_zoxide"></a>8.1. Property `Rovr Config > plugins > zoxide`
 
@@ -2416,6 +2421,59 @@ Must be one of:
 | **Default**  | `""`     |
 
 **Description:** Path to the folder where Poppler-related binaries are located. Leave empty to use the system PATH.
+
+### <a name="plugins_file_one"></a>8.6. Property `Rovr Config > plugins > file_one`
+
+|                           |             |
+| ------------------------- | ----------- |
+| **Type**                  | `object`    |
+| **Required**              | No          |
+| **Additional properties** | Not allowed |
+
+| Property                                   | Type    | Title/Description                                                                                                                                                                  |
+| ------------------------------------------ | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [enabled](#plugins_file_one_enabled)       | boolean | Enable file(1) MIME type detection for preview selection. When enabled, rovr uses the \`file\` command to detect file types instead of relying solely on file extensions.          |
+| [mime_rules](#plugins_file_one_mime_rules) | object  | Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder. |
+
+#### <a name="plugins_file_one_enabled"></a>8.6.1. Property `Rovr Config > plugins > file_one > enabled`
+
+|              |           |
+| ------------ | --------- |
+| **Type**     | `boolean` |
+| **Required** | No        |
+| **Default**  | `false`   |
+
+**Description:** Enable file(1) MIME type detection for preview selection. When enabled, rovr uses the `file` command to detect file types instead of relying solely on file extensions.
+
+#### <a name="plugins_file_one_mime_rules"></a>8.6.2. Property `Rovr Config > plugins > file_one > mime_rules`
+
+|                           |                                                                                                                                                                                                                                                                                                                                         |
+| ------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Type**                  | `object`                                                                                                                                                                                                                                                                                                                                |
+| **Required**              | No                                                                                                                                                                                                                                                                                                                                      |
+| **Additional properties** | [Each additional property must conform to the schema](#plugins_file_one_mime_rules_additionalProperties)                                                                                                                                                                                                                                |
+| **Default**               | `{"text/*": "text", "image/*": "image", "application/pdf": "pdf", "application/zip": "archive", "application/x-tar": "archive", "application/gzip": "archive", "application/x-bzip2": "archive", "application/x-xz": "archive", "application/x-rar": "archive", "application/x-7z-compressed": "archive", "inode/directory": "folder"}` |
+
+**Description:** Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder.
+
+| Property                                              | Type             | Title/Description |
+| ----------------------------------------------------- | ---------------- | ----------------- |
+| [](#plugins_file_one_mime_rules_additionalProperties) | enum (of string) |                   |
+
+##### <a name="plugins_file_one_mime_rules_additionalProperties"></a>8.6.2.1. Property `Rovr Config > plugins > file_one > mime_rules > additionalProperties`
+
+|              |                    |
+| ------------ | ------------------ |
+| **Type**     | `enum (of string)` |
+| **Required** | No                 |
+
+Must be one of:
+
+- "text"
+- "image"
+- "pdf"
+- "archive"
+- "folder"
 
 ## <a name="mode"></a>9. Property `Rovr Config > mode`
 
