--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -43,15 +43,13 @@ description: config schema humanified
   - [4.1. Property `Rovr Config > icons > files`](#icons_files)
     - [4.1.1. Rovr Config > icons > files > files items](#icons_files_items)
       - [4.1.1.1. Property `Rovr Config > icons > files > files items > pattern`](#icons_files_items_pattern)
-      - [4.1.1.2. Property `Rovr Config > icons > files > files items > match_type`](#icons_files_items_match_type)
-      - [4.1.1.3. Property `Rovr Config > icons > files > files items > icon`](#icons_files_items_icon)
-      - [4.1.1.4. Property `Rovr Config > icons > files > files items > color`](#icons_files_items_color)
+      - [4.1.1.2. Property `Rovr Config > icons > files > files items > icon`](#icons_files_items_icon)
+      - [4.1.1.3. Property `Rovr Config > icons > files > files items > color`](#icons_files_items_color)
   - [4.2. Property `Rovr Config > icons > folders`](#icons_folders)
     - [4.2.1. Rovr Config > icons > folders > folders items](#icons_folders_items)
       - [4.2.1.1. Property `Rovr Config > icons > folders > folders items > pattern`](#icons_folders_items_pattern)
-      - [4.2.1.2. Property `Rovr Config > icons > folders > folders items > match_type`](#icons_folders_items_match_type)
-      - [4.2.1.3. Property `Rovr Config > icons > folders > folders items > icon`](#icons_folders_items_icon)
-      - [4.2.1.4. Property `Rovr Config > icons > folders > folders items > color`](#icons_folders_items_color)
+      - [4.2.1.2. Property `Rovr Config > icons > folders > folders items > icon`](#icons_folders_items_icon)
+      - [4.2.1.3. Property `Rovr Config > icons > folders > folders items > color`](#icons_folders_items_color)
 - [5. Property `Rovr Config > theme`](#theme)
   - [5.1. Property `Rovr Config > theme > default`](#theme_default)
   - [5.2. Property `Rovr Config > theme > transparent`](#theme_transparent)
@@ -678,12 +676,11 @@ Must be one of:
 | **Required**              | No               |
 | **Additional properties** | Any type allowed |
 
-| Property                                    | Type             | Title/Description                                                                                                   |
-| ------------------------------------------- | ---------------- | ------------------------------------------------------------------------------------------------------------------- |
-| [pattern](#icons_files_items_pattern)       | string           | The file name pattern to match                                                                                      |
-| [match_type](#icons_files_items_match_type) | enum (of string) | Type of matching:<br />\`exact\` : for exact file name matching<br />\`endswith\`: for file name ends with matching |
-| [icon](#icons_files_items_icon)             | string           | The icon character to use.                                                                                          |
-| [color](#icons_files_items_color)           | string           | The color for the icon. Can be a named color or hex code.                                                           |
+| Property                              | Type   | Title/Description                                                                                                                        |
+| ------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------- |
+| [pattern](#icons_files_items_pattern) | string | The glob pattern to match against the file name (e.g., '\*.py', 'LICENSE').<br />Both the filename and glob will be forced to lowercase! |
+| [icon](#icons_files_items_icon)       | string | The icon character to use.                                                                                                               |
+| [color](#icons_files_items_color)     | string | The color for the icon. Can be a named color or hex code.                                                                                |
 
 ##### <a name="icons_files_items_pattern"></a>4.1.1.1. Property `Rovr Config > icons > files > files items > pattern`
 
@@ -692,26 +689,10 @@ Must be one of:
 | **Type**     | `string` |
 | **Required** | Yes      |
 
-**Description:** The file name pattern to match
+**Description:** The glob pattern to match against the file name (e.g., '\*.py', 'LICENSE').
+Both the filename and glob will be forced to lowercase!
 
-##### <a name="icons_files_items_match_type"></a>4.1.1.2. Property `Rovr Config > icons > files > files items > match_type`
-
-|              |                    |
-| ------------ | ------------------ |
-| **Type**     | `enum (of string)` |
-| **Required** | Yes                |
-| **Default**  | `"exact"`          |
-
-**Description:** Type of matching:
-`exact` : for exact file name matching
-`endswith`: for file name ends with matching
-
-Must be one of:
-
-- "exact"
-- "endswith"
-
-##### <a name="icons_files_items_icon"></a>4.1.1.3. Property `Rovr Config > icons > files > files items > icon`
+##### <a name="icons_files_items_icon"></a>4.1.1.2. Property `Rovr Config > icons > files > files items > icon`
 
 |              |          |
 | ------------ | -------- |
@@ -720,7 +701,7 @@ Must be one of:
 
 **Description:** The icon character to use.
 
-##### <a name="icons_files_items_color"></a>4.1.1.4. Property `Rovr Config > icons > files > files items > color`
+##### <a name="icons_files_items_color"></a>4.1.1.3. Property `Rovr Config > icons > files > files items > color`
 
 |              |          |
 | ------------ | -------- |
@@ -759,12 +740,11 @@ Must be one of:
 | **Required**              | No               |
 | **Additional properties** | Any type allowed |
 
-| Property                                      | Type             | Title/Description                                                                                                   |
-| --------------------------------------------- | ---------------- | ------------------------------------------------------------------------------------------------------------------- |
-| [pattern](#icons_folders_items_pattern)       | string           | The folder name pattern to match                                                                                    |
-| [match_type](#icons_folders_items_match_type) | enum (of string) | Type of matching:<br />\`exact\` : for exact file name matching<br />\`endswith\`: for file name ends with matching |
-| [icon](#icons_folders_items_icon)             | string           | The icon character to use (should be a nerd font character)                                                         |
-| [color](#icons_folders_items_color)           | string           | The color for the icon. Can be a named color or hex code                                                            |
+| Property                                | Type   | Title/Description                                                                                                                       |
+| --------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------- |
+| [pattern](#icons_folders_items_pattern) | string | The glob pattern to match against the folder name (e.g., 'src', '.\*').<br />Both the folder name and glob will be forced to lowercase! |
+| [icon](#icons_folders_items_icon)       | string | The icon character to use (should be a nerd font character)                                                                             |
+| [color](#icons_folders_items_color)     | string | The color for the icon. Can be a named color or hex code                                                                                |
 
 ##### <a name="icons_folders_items_pattern"></a>4.2.1.1. Property `Rovr Config > icons > folders > folders items > pattern`
 
@@ -773,26 +753,10 @@ Must be one of:
 | **Type**     | `string` |
 | **Required** | Yes      |
 
-**Description:** The folder name pattern to match
+**Description:** The glob pattern to match against the folder name (e.g., 'src', '.\*').
+Both the folder name and glob will be forced to lowercase!
 
-##### <a name="icons_folders_items_match_type"></a>4.2.1.2. Property `Rovr Config > icons > folders > folders items > match_type`
-
-|              |                    |
-| ------------ | ------------------ |
-| **Type**     | `enum (of string)` |
-| **Required** | Yes                |
-| **Default**  | `"exact"`          |
-
-**Description:** Type of matching:
-`exact` : for exact file name matching
-`endswith`: for file name ends with matching
-
-Must be one of:
-
-- "exact"
-- "endswith"
-
-##### <a name="icons_folders_items_icon"></a>4.2.1.3. Property `Rovr Config > icons > folders > folders items > icon`
+##### <a name="icons_folders_items_icon"></a>4.2.1.2. Property `Rovr Config > icons > folders > folders items > icon`
 
 |              |          |
 | ------------ | -------- |
@@ -801,7 +765,7 @@ Must be one of:
 
 **Description:** The icon character to use (should be a nerd font character)
 
-##### <a name="icons_folders_items_color"></a>4.2.1.4. Property `Rovr Config > icons > folders > folders items > color`
+##### <a name="icons_folders_items_color"></a>4.2.1.3. Property `Rovr Config > icons > folders > folders items > color`
 
 |              |          |
 | ------------ | -------- |
