perf(preview): use pygments instead of tree-sitter
should improve performance and remove dependency on tree-sitter

--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -1084,8 +1084,8 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | [tab_close](#keybinds_tab_close)                                       | array  | Close the current tab.                                                                            |
 | [preview_scroll_left](#keybinds_preview_scroll_left)                   | array  | Temporarily unused.                                                                               |
 | [preview_scroll_right](#keybinds_preview_scroll_right)                 | array  | Temporarily unused.                                                                               |
-| [preview_select_right](#keybinds_preview_select_right)                 | array  | While using TextArea for previewing, use this keybind to extend selection to the right.           |
-| [preview_select_left](#keybinds_preview_select_left)                   | array  | While using TextArea for previewing, use this keybind to extend selection to the left.            |
+| [preview_select_right](#keybinds_preview_select_right)                 | array  | Temporarily unused.                                                                               |
+| [preview_select_left](#keybinds_preview_select_left)                   | array  | Temporarily unused.                                                                               |
 | [show_keybinds](#keybinds_show_keybinds)                               | array  | Show the keybinds list with all available keybinds.                                               |
 | [change_sort_order](#keybinds_change_sort_order)                       | array  | Show a chooser to change the sort order.                                                          |
 | [quit_app](#keybinds_quit_app)                                         | array  | Quit the application                                                                              |
@@ -1898,7 +1898,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Type**     | `array` |
 | **Required** | No      |
 
-**Description:** While using TextArea for previewing, use this keybind to extend selection to the right.
+**Description:** Temporarily unused.
 
 |                      | Array restrictions |
 | -------------------- | ------------------ |
@@ -1915,7 +1915,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Type**     | `array` |
 | **Required** | No      |
 
-**Description:** While using TextArea for previewing, use this keybind to extend selection to the left.
+**Description:** Temporarily unused.
 
 |                      | Array restrictions |
 | -------------------- | ------------------ |
